// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getConfigDeclaration 1`] = `
Object {
  "code": "extend(true, {
  \\"a\\": true
}, __DEV__ ? {
  \\"b\\": false
} : {}, process.env.UBER_ENVIRONMENT === 'production' ? {
  \\"c\\": true
} : {})",
  "map": null,
  "rawMappings": undefined,
}
`;

exports[`getConfigDeclaration onlyCommon 1`] = `
Object {
  "code": "{
  \\"a\\": \\"something\\"
}",
  "map": null,
  "rawMappings": undefined,
}
`;

exports[`getConfigDeclaration onlyDev 1`] = `
Object {
  "code": "__DEV__ ? {
  \\"a\\": \\"test\\"
} : {}",
  "map": null,
  "rawMappings": undefined,
}
`;

exports[`getConfigDeclaration onlyProduction 1`] = `
Object {
  "code": "process.env.UBER_ENVIRONMENT === 'production' ? {
  \\"b\\": \\"lol\\"
} : {}",
  "map": null,
  "rawMappings": undefined,
}
`;

exports[`getConfigDeclaration undefined common values 1`] = `
Object {
  "code": "extend(true, __DEV__ ? {
  \\"a\\": \\"test\\"
} : {}, process.env.UBER_ENVIRONMENT === 'production' ? {
  \\"b\\": \\"test\\"
} : {})",
  "map": null,
  "rawMappings": undefined,
}
`;

exports[`getConfigDeclaration undefined dev values 1`] = `
Object {
  "code": "extend(true, {
  \\"a\\": \\"something\\"
}, process.env.UBER_ENVIRONMENT === 'production' ? {
  \\"b\\": \\"lol\\"
} : {})",
  "map": null,
  "rawMappings": undefined,
}
`;

exports[`getConfigDeclaration undefined production values 1`] = `
Object {
  "code": "extend(true, {
  \\"a\\": \\"something\\"
}, __DEV__ ? {
  \\"b\\": \\"test\\"
} : {})",
  "map": null,
  "rawMappings": undefined,
}
`;

exports[`loadConfig 1`] = `
Object {
  "a": true,
  "b": Object {
    "a": true,
  },
  "noDev": Object {
    "a": "something",
  },
  "noProduction": Object {
    "a": "something",
  },
  "onlyCommon": Object {
    "a": "something",
  },
}
`;

exports[`loadConfig 2`] = `
Object {
  "b": Object {
    "b": false,
  },
  "c": true,
  "noCommon": Object {
    "a": "test",
  },
  "noProduction": Object {
    "b": "test",
  },
  "onlyDev": Object {
    "a": "test",
  },
}
`;

exports[`loadConfig 3`] = `
Object {
  "a": false,
  "b": Object {
    "c": true,
  },
  "noCommon": Object {
    "b": "test",
  },
  "noDev": Object {
    "b": "lol",
  },
  "onlyProduction": Object {
    "b": "lol",
  },
}
`;
